upgrade the entities